# llama.gd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build-cpu.ps1  build-cuda.ps1  build-vulkan.ps1  build.ps1  log.txt
src/: conversion.cpp  conversion.hpp  gd_throw.cpp  gd_throw.hpp  llama_state.cpp  llama_state.hpp  llama_state_file.cpp  llama_state_file.hpp  llama_utils.cpp  llama_utils.hpp  llama_worker.cpp  llama_worker.hpp  llamagd.cpp  llamagd.hpp  register_types.cpp  register_types.hpp
